# PaintBucket

./: CMakeLists.txt  CMakePresets.json  README.md  link_wxWidgets.cmake
src/image/: AffineImage.h  CMakeLists.txt  ScaledImageDrawer.cpp  ScaledImageDrawer.h
src/logging/: CMakeLists.txt  log.cpp  log.h
src/main/: CMakeLists.txt  MainApp.cpp  MainFrame.cpp  MainFrame.h
src/paint/: CMakeLists.txt  PaintWindow.cpp  PaintWindow.h
src/util/: CMakeLists.txt  Checkerboard.h  Macros.h  MathUtils.h
